--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "scripts": {
     "test": "npm run jshint && npm run mocha",
     "jshint": "jshint src/. test/. --config",
-    "start": "node src/",
+    "start": "nodemon src/",
+    "build": "webpack --watch",
     "mocha": "mocha test/ --recursive"
   },
   "dependencies": {
@@ -30,10 +31,12 @@
     "feathers-configuration": "^0.3.3",
     "feathers-errors": "^2.4.0",
     "feathers-hooks": "^1.5.8",
+    "feathers-knex": "^2.4.0",
     "feathers-rest": "^1.5.0",
     "feathers-sequelize": "^1.3.3",
     "feathers-socketio": "^1.4.1",
     "fs-extra": "^0.30.0",
+    "knex": "^0.12.6",
     "passport": "^0.3.2",
     "sequelize": "^3.24.4",
     "serve-favicon": "^2.3.0",
@@ -41,8 +44,22 @@
     "winston": "^2.2.0"
   },
   "devDependencies": {
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-react": "^6.16.0",
+    "feathers-client": "^1.6.1",
     "jshint": "^2.9.3",
     "mocha": "^3.1.2",
-    "request": "^2.75.0"
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "request": "^2.75.0",
+    "socket.io-client": "^1.5.0",
+    "webpack": "^1.13.2"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ]
   }
 }
