--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "bookshelf": "^0.10.2",
     "compression": "^1.6.2",
     "cors": "^2.8.1",
     "feathers": "^2.0.2",
