--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "feathers-socketio": "^1.4.1",
     "fs-extra": "^0.30.0",
     "knex": "^0.12.6",
+    "lodash": "^4.16.4",
     "passport": "^0.3.2",
     "pg": "^6.1.0",
     "sequelize": "^3.24.4",
