--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "start": "node src/",
     "dev": "nodemon src/",
     "build": "webpack --watch",
-    "mocha": "mocha test/ --recursive"
+    "mocha": "mocha test/ --recursive",
+    "localm": "knex migrate:rollback && knex migrate:latest && knex seed:run",
+    "herokum": "heroku run knex migrate:rollback && heroku run knex migrate:latest && heroku run knex seed:run"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
