--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "fs-extra": "^0.30.0",
     "knex": "^0.12.6",
     "lodash": "^4.16.4",
+    "moment": "^2.15.2",
     "passport": "^0.3.2",
     "pg": "^6.1.0",
     "sequelize": "^3.24.4",
